fix categ buttons spacing when stacked

--- a/static/skywarehouse/css/style.less
+++ b/static/skywarehouse/css/style.less
@@ -61,3 +61,8 @@ footer {
     .card-action a { color: #000 }
 }
 .card > a { color: #212121 }
+
+// Main page buttons
+.btn.categ {
+    margin-bottom: 5px;
+}
